--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </p>
     <div class="badges-container">
       <img src="./assets/badge/developer.png" alt="dev badge">
-      <img src="./assets/badge/verified.png" alt="verified badge">
+      <img src="./assets/badge/love.png" alt="verified badge">
     </div>
     <div class="lang-container">
       <img src="./assets/logo/blender.png" alt="blender">
