--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <img id="profile-picture" src="./assets/pfp/default.png" alt="Profile Picture">
     <img id="avatar-frame" src="./assets/pfp/frame.png" alt="Avatar Frame">
     <p id="username-container" style="color: white; font-weight: bold; font-size: 32px;">
-      <span id="username">TrAn(Danny)</span>  
+      <span id="username">TrAn</span>  
       <span id="typing-cursor">|</span>
     </p>
     <div class="badges-container">
@@ -57,7 +57,7 @@
     </div>
     <div class="user-description">
       <p id="user-description" style="color: white;">
-        Xin chào, tôi là TrAn(Danny),<br>
+        Xin chào, tôi là TrAn,<br>
         Chậu có hoa là ThVy
       </p>
     </div>
